--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@ button {
 
 .app-container {
   display: flex;
-  margin: 70px auto;
+  margin-top: 70px;
   flex-direction: column;
   align-items: center;
   width: 100%;
